k8s-deployments/04-dependency-bot/overlays/staging/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-bot
spec:
  replicas: 1
