k8s-deployments/04-dependency-bot/overlays/staging/volumeMount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-bot
spec:
  template:
    spec:
      volumes:
        - name: configmap
          configMap:
            name: dependency-bot-staging
