k8s-deployments/04-dependency-bot/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-bot
spec:
  rules:
    - http:
        paths:
          - path: /dependency-bot-staging(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dependency-bot-staging
                port:
                  number: 3000
